spec/lib/code/errors/messages/methodNotDefined.js
// Generated by CoffeeScript 1.12.6
(function() {
  'use strict';
  module.exports = function(dd) {
    return dd.drive({
      it: "returns 'methodNotDefined' error message for method of module",
      i: ['module', 'methodName'],
      e: {
        title: "Method methodName()",
        messages: ["is not defined in 'module'"]
      }
    });
  };

}).call(this);
